--- a/templates/pages/aboutcompany.html
+++ b/templates/pages/aboutcompany.html
@@ -40,27 +40,6 @@
         </div>
     </div>
 </div>
-<!-- <div class="about-founder">
-    <div class="container">
-        <div class="row">
-            <h1>About President KB Shrestha</h1>
-            <div class="col-sm">
-                <p class="president-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione id, sequi libero enim illo perferendis perspiciatis quae laudantium nemo voluptatum non repudiandae impedit nostrum fugiat voluptas maiores iste dolorem pariatur!
-                </p>
-                <p class="president-description-sub">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quis mollitia quos labore vero explicabo praesentium architecto minus dolorum officiis. Voluptates vero aperiam dolorum doloremque cum quas rerum sapiente assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ex reiciendis suscipit eaque doloribus reprehenderit officiis amet aperiam delectus veritatis, enim placeat, dolorum quis ea fugit fugiat sit dolorem repellat.
-                </p>
-                <p class="president-description-sub">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quis mollitia quos labore vero explicabo praesentium architecto minus dolorum officiis. Voluptates vero aperiam dolorum doloremque cum quas rerum sapiente assumenda.
-                </p>
-            </div>
-            <div class="col-sm">
-                <img src="./img/img2.jpg" alt="" class="president-img" width="100%">
-            </div>
-        </div>
-</div>
-</div> -->
 <div class="about-experts id="bg-color">
 <div class="container">
     <div class="expert-title">
@@ -85,9 +64,9 @@
       <h1 class="book-free-counselling">
         Book Free Counselling
       </h1>
-      <p class="counselling-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur ipsum odio dolorum! Laborum ipsa odit ad consequatur rem minima quos, tempora molestiae eligendi, doloribus voluptatum voluptatibus earum consectetur. Iusto.</p>
+      <p class="counselling-description">Tara Education Consultancy believes in "uncompromising quality" and "passionate customer care" in order for making our clients satisfied. We help each student make an informed decision to achieve their education and career goal in Australia by choosing the right course, the right education provider and the right location.</p>
       <a href=""><button class="book-a-session">Book a Session</button></a>
-      <p class="email-num-details">Email : example@gamil.com | Number : 9841354543</p>
+      <p class="email-num-details">Email : info@taraeducation.com.au | Number : +61433893456</p>
     </div>
   </div>
 </div>
