--- a/templates/pages/messagefromceo.html
+++ b/templates/pages/messagefromceo.html
@@ -81,18 +81,19 @@
 </div>
 </div>
 <div class="counselling">
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <h1 class="book-free-counselling">
-        Book Free Counselling
-      </h1>
-      <p class="counselling-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur ipsum odio dolorum! Laborum ipsa odit ad consequatur rem minima quos, tempora molestiae eligendi, doloribus voluptatum voluptatibus earum consectetur. Iusto.</p>
-      <button class="book-a-session">Book a Session</button>
-      <p class="email-num-details">Email : example@gamil.com | Number : 9841354543</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <h1 class="book-free-counselling">
+          Book Free Counselling
+        </h1>
+        <p class="counselling-description">Tara Education Consultancy believes in "uncompromising quality" and "passionate customer care" in order for making our clients satisfied. We help each student make an informed decision to achieve their education and career goal in Australia by choosing the right course, the right education provider and the right location.</p>
+        <a href=""><button class="book-a-session">Book a Session</button></a>
+        <p class="email-num-details">Email : info@taraeducation.com.au | Number : +61433893456</p>
+      </div>
     </div>
   </div>
-</div>
+  </div>
 </div>
 </section>
 {% block script %}
