--- a/templates/pages/service.html
+++ b/templates/pages/service.html
@@ -159,34 +159,11 @@
         <h1 class="book-free-counselling">
           Book Free Counselling
         </h1>
-        <p class="counselling-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur ipsum odio dolorum! Laborum ipsa odit ad consequatur rem minima quos, tempora molestiae eligendi, doloribus voluptatum voluptatibus earum consectetur. Iusto.</p>
-        <a href="{% url 'contact' %}"><button class="book-a-session">Book a Session</button></a>
-        <p class="email-num-details">Email : example@gamil.com | Number : 9841354543</p>
+        <p class="counselling-description">Tara Education Consultancy believes in "uncompromising quality" and "passionate customer care" in order for making our clients satisfied. We help each student make an informed decision to achieve their education and career goal in Australia by choosing the right course, the right education provider and the right location.</p>
+        <a href=""><button class="book-a-session">Book a Session</button></a>
+        <p class="email-num-details">Email : info@taraeducation.com.au | Number : +61433893456</p>
       </div>
     </div>
   </div>
-</div>
-<!-- <section>
-  <div class="container">
-     <div class="expert-title">
-       <h1 class="expert-title">Universities & Colleges</h1>
-     </div>
-     <div class="row owl-carousel">
-       <div class="col">
-         <img src="./img/img1.jpg" alt="Users Photo" class="about-img" id="img14" style="visibility:visible">
-       </div>
-       <div class="col">
-         <img src="./img/img2.jpg" alt=" Users Photo " class="about-img" id="img15" style="visibility:visible">
-       </div>
-       <div class="col">
-         <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img16" style="visibility:visible">
-       </div>
-       <div class="col">
-         <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img17" style="visibility:visible">
-       </div>
-     </div>
-   </div>
-   </div>
- </div>
-</section>  -->
+  </div>
 {% endblock %}
