--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -10,6 +10,7 @@
           <li><a href="https://www.instagram.com/tecgroup.global/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
           <li><a href="https://twitter.com/TecGroupGlobal1"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
           <li><a href="mailto: info@taraeducation.com.au"><i class="fa fa-google" aria-hidden="true"></i></a></li>
+          <li><a href="viber://chat/?number=+61433893456"><i class="fab fa-viber" aria-hidden="true"></i></a></li>
         </ul>
       </div>
       <div class="sec quickLinks">
@@ -32,16 +33,18 @@
               Putalaisadak,<br> Kathmandu-32</span>
           </li>
           <li>
+            <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+            <span>Suite 905<br>
+              Level 9,
+              97 Bathurst street <br> Sydney 2000</span>
+          </li>
+          <li>
             <span><i class="fa fa-phone" aria-hidden="true"></i></span>
             <p><a href="tel:4421860">+977-01-4421860</a></p>
           </li>
           <li>
             <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
             <p><a href="tel:02 - 0422 863 498">02 - 0422 863 498</a></p>
-          </li>
-          <li>
-            <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
-            <p><a href="tel:9810351494">+977-9810 351 494</a></p>
           </li>
           <li>
             <span><i class="fa fa-envelope" aria-hidden="true"></i></span>
