--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -71,6 +71,9 @@
           <div class="social_icon">
            <a href="https://www.facebook.com/tecgroupglobal"><i class="fa fa-facebook " aria-hidden="true"></i></a> 
           </div>
+          <div class="social_icon">
+            <a href="viber://chat/?number=+61433893456"><i class="fab fa-viber " aria-hidden="true"></i></a> 
+           </div>
         </ul>
       </div>
     </div>
