--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -21,6 +21,7 @@
           <li><a href="{% url 'blog' %}">Blog</a></li>
           <li><a href="{% url 'gallery' %}">Gallery</a></li>
           <li><a href="{% url 'contact' %}">Contact</a></li>
+          <li><a href="{% url 'enroll' %}">Enroll Course</a></li>
         </ul>
       </div>
       <div class="sec contact">
