Changing the footer description

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -131,8 +131,8 @@
             <span class="label address">
              <a href="#"><i class="fas fa-map-marker-alt contact-i"></i>
               Address :
-              Suite 3 - Level 4, 
-              50 Margaret St, Sydney 2000 </a>
+              Suite 905 - Level 9, 
+              97 Bathurst street Sydney 2000 </a>
             </span>
           </p>
         </div>
