Changing the footer description

--- a/templates/pages/messagefromceo.html
+++ b/templates/pages/messagefromceo.html
@@ -89,12 +89,11 @@
         </h1>
         <p class="counselling-description">Tara Education Consultancy believes in "uncompromising quality" and "passionate customer care" in order for making our clients satisfied. We help each student make an informed decision to achieve their education and career goal in Australia by choosing the right course, the right education provider and the right location.</p>
         <a href=""><button class="book-a-session">Book a Session</button></a>
-        <p class="email-num-details">Email : info@taraeducation.com.au | Number : +61433893456</p>
+        <p class="email-num-details">Email : <a href="mailto: info@taraeducation.com.au">info@taraeducation.com.au</a> | Viber Number : <a href="viber://chat/?number=+61433893456">+61433893456</a></p>
       </div>
     </div>
   </div>
   </div>
-</div>
 </section>
 {% block script %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
