--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -45,7 +45,7 @@
           </li>
           <li>
             <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
-            <p><a href="tel:02 - 0422 863 498">02 - 0422 863 498</a></p>
+            <p><a href="tel:0433893456 ">0433893456 </a></p>
           </li>
           <li>
             <span><i class="fa fa-envelope" aria-hidden="true"></i></span>
