Changing the footer description

--- a/templates/pages/service.html
+++ b/templates/pages/service.html
@@ -45,7 +45,7 @@
                   </div>
                   <div class="feature-content">
                       <h5>Admission Counselling</h5>
-                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                      <p>Admission counseling is the first and most important step leading to a proper gateway to career counseling.</p>
                   </div>
               </div>
             </a>
@@ -62,7 +62,8 @@
                   </div>
                   <div class="feature-content">
                       <h5>Scholarship Information</h5>
-                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                      <p>The Australia Awards are prestigious international scholarships and fellowships funded by the Australian Government.
+                      </p>
                   </div>
               </div>
             </a>
@@ -79,7 +80,7 @@
                     </div>
                     <div class="feature-content">
                         <h5>Student Visa Extension</h5>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                        <p>When applying for a student visa to study in Australia, there are several visa requirements you have to meet. </p>
                     </div>
                 </div>
               </a>
@@ -95,7 +96,8 @@
                   </div>
                   <div class="feature-content">
                       <h5>Course & University Selection</h5>
-                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                      <p>There are thousands of high-quality courses on offer in Australia, across a wide range of study areas.
+                      </p>
                   </div>
               </div>
             </a>
@@ -109,7 +111,9 @@
                   </div>
                   <div class="feature-content">
                       <h5>Migration Services</h5>
-                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                      <p>Our expert Migration Agents can assist you since the beginning
+                        of your journey in Australia, assisting and applying the suitable
+                        visa for you.</p>
                   </div>
               </div>
             </a>
@@ -123,11 +127,13 @@
                   </div>
                   <div class="feature-content">
                       <h5>Professional Year Program</h5>
-                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                      <p>Professional Year Programs run for 12 months and are currently available in the fields of accounting, computer science and engineering.</p>
                   </div>
               </div>
             </a>
           </div>
+         
+
   </div>
   </div>
 </section>
