Changing the footer description

--- a/templates/pages/service.html
+++ b/templates/pages/service.html
@@ -140,7 +140,7 @@
 
 <section>
   <div class="container">
-  <h1 class="expert-title">Courses</h1>
+  <h1 class="expert-title">Popular Courses</h1>
   <div class="course-row">
     {% for Courses in courses %}
     <div class="course-col">
