Changing the footer description

--- a/templates/pages/aboutcompany.html
+++ b/templates/pages/aboutcompany.html
@@ -65,7 +65,7 @@
         Book Free Counselling
       </h1>
       <p class="counselling-description">Tara Education Consultancy believes in "uncompromising quality" and "passionate customer care" in order for making our clients satisfied. We help each student make an informed decision to achieve their education and career goal in Australia by choosing the right course, the right education provider and the right location.</p>
-      <a href=""><button class="book-a-session">Book a Session</button></a>
+      <a href="{% url 'contact' %}"><button class="book-a-session">Book a Session</button></a>
       <p class="email-num-details">Email : <a href="mailto: info@taraeducation.com.au">info@taraeducation.com.au</a> | Viber Number : <a href="viber://chat/?number=+61433893456">+61433893456</a></p>
     </div>
   </div>
